--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McDonald's Menu</title>
+    <title>Vista Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
