--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,9 @@
     <!-- Linkerkant menu -->
     <div class="menu-list">
         <h2>Menu</h2>
-        <div class="menu-item" onclick="showItemDetails('burger')">Burgers</div>
+        <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodjes</div>
         <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
-        <div class="menu-item" onclick="showItemDetails('fries')">Frietjes</div>
+        <div class="menu-item" onclick="showItemDetails('Snacks')">snacks</div>
         <div class="menu-item" onclick="showItemDetails('deserts')">ijsjes</div>
     </div>
 
