--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vista Menu</title>
+    <title>Het hoofdmenu van de Mees</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
@@ -18,10 +18,16 @@
         <div class="menu-item" onclick="showItemDetails('deserts')">ijsjes</div>
     </div>
 
+    <div id="menu-detail" class="menu-detail">
+    <h2 id="item-title">Selecteer een item</h2>
+    <img id="item-image" src="" alt="">
+    <p id="=item discription"></p>
+    </div>
+
     <!-- Rechterkant detailweergave -->
     <div id="menu-detail" class="menu-detail">
         <h2 id="item-title">Selecteer een item</h2>
-        <img id="item-image" src="" alt="">
+        <img id="item-image" src="https://thumbs.dreamstime.com/b/submarine-sandwich-ham-cheese-clipping-path-egg-tomato-cucumber-lettuce-white-48580716.jpg" alt="https://thumbs.dreamstime.com/b/submarine-sandwich-ham-cheese-clipping-path-egg-tomato-cucumber-lettuce-white-48580716.jpg">
         <p id="item-description"></p>
     </div>
 
