--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 McDonald's</p>
+        <p>&copy; 2025 vista </p>
     </footer>
     
 </body>
