--- a/website/index.html
+++ b/website/index.html
@@ -12,10 +12,17 @@
     <!-- Linkerkant menu -->
     <div class="menu-list">
         <h2>Menu</h2>
-        <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodjes</div>
-        <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
-        <div class="menu-item" onclick="showItemDetails('Snacks')">snacks</div>
-        <div class="menu-item" onclick="showItemDetails('deserts')">ijsjes</div>
+        <!-- Broodje Gezond -->
+        <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodje Gezond</div>
+        <!-- Spa Water -->
+        <div class="menu-item" onclick="showItemDetails('drinks')">Spa Water</div>
+        <!-- Frikandel -->
+        <div class="menu-item" onclick="showItemDetails('Snacks')">Frikandel</div>
+        <!-- Ijsjes -->
+        <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
+        <!-- Placeholder Items -->
+        <div class="menu-item" onclick="showItemDetails('Placeholder1')">Placeholder 1</div>
+        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
     </div>
 
     <div id="menu-detail" class="menu-detail">
