--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,7 @@
         <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
         <div class="menu-item" onclick="showItemDetails('Snacks')">snacks</div>
         <div class="menu-item" onclick="showItemDetails('deserts')">ijsjes</div>
+        <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
     </div>
 
     <div id="menu-detail" class="menu-detail">
