--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,8 @@
         <div class="menu-item" onclick="showItemDetails('Snacks')">Frikandel</div>
         <!-- Ijsjes -->
         <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
+        <!--Deals-->
+        <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
         <!-- Placeholder Items -->
         <div class="menu-item" onclick="showItemDetails('Placeholder1')">Placeholder 1</div>
         <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
