--- a/website/index.html
+++ b/website/index.html
@@ -12,29 +12,31 @@
     <!-- Linkerkant menu -->
     <div class="menu-list">
         <h2>Menu</h2>
-        <!-- Broodje Gezond -->
-        <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodje Gezond</div>
-        <!-- Spa Water -->
-        <div class="menu-item" onclick="showItemDetails('drinks')">Spa Water</div>
-        <!-- Frikandel -->
-        <div class="menu-item" onclick="showItemDetails('Snacks')">Frikandel</div>
-        <!-- Ijsjes -->
+        <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodjes</div>
+        <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
+        <div class="menu-item" onclick="showItemDetails('Snacks')">Snacks</div>
         <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
-        <!-- Placeholder Items -->
-        <div class="menu-item" onclick="showItemDetails('Placeholder1')">Placeholder 1</div>
-        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
     </div>
 
-    <div id="menu-detail" class="menu-detail">
-    <h2 id="item-title">Selecteer een item</h2>
-    <img id="item-image" src="" alt="">
-    <p id="item-description"></p>
+    <!-- Rechterkant: Productafbeeldingen in mooie hokjes -->
+    <div id="product-display" class="product-display">
+        <!-- Hier komen de items die worden weergegeven als afbeeldingen -->
+    </div>
+
+    <!-- Modaal venster voor grotere afbeelding en beschrijving -->
+    <div id="modal" class="modal" onclick="closeModal()">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="modal-title"></h2>
+            <img id="modal-image" src="" alt="">
+            <p id="modal-description"></p>
+        </div>
     </div>
 
     <footer>
         <p>&copy; 2025 McDonald's</p>
     </footer>
-    
+
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
