--- a/website/index.html
+++ b/website/index.html
@@ -22,8 +22,9 @@
         <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
         <!--Deals-->
         <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
-        <!-- Placeholder Items -->
-        <div class="menu-item" onclick="showItemDetails('Placeholder1')">Placeholder 1</div>
+        <!-- Soepen -->
+        <div class="menu-item" onclick="showItemDetails('Soepen')">Placeholder 1</div>
+        <!-- placeholder-->
         <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
     </div>
 
