--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
         <!--Deals-->
         <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
         <!-- Soepen -->
-        <div class="menu-item" onclick="showItemDetails('Soepen')">Placeholder 1</div>
+        <div class="menu-item" onclick="showItemDetails('Soepen')">Soepen</div>
         <!-- placeholder-->
         <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
     </div>
