--- a/website/index.html
+++ b/website/index.html
@@ -16,12 +16,11 @@
         <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
         <div class="menu-item" onclick="showItemDetails('Snacks')">Snacks</div>
         <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
-        <!--Deals-->
-        <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
-        <!-- Soepen -->
-        <div class="menu-item" onclick="showItemDetails('Soepen')">Soepen</div>
-        <!-- placeholder-->
-        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
+    </div>
+
+    <!-- Rechterkant: Productafbeeldingen in mooie hokjes -->
+    <div id="product-display" class="product-display">
+        <!-- Hier komen de items die worden weergegeven als afbeeldingen -->
     </div>
 
     <!-- Modaal venster voor grotere afbeelding en beschrijving -->
@@ -35,7 +34,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 vista </p>
+        <p>&copy; 2025 McDonald's</p>
     </footer>
 
     <script src="script.js"></script>
