--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Het hoofdmenu van de Mees</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cart.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -51,4 +52,5 @@
 
 </body>
 <script src="script.js"></script>
+<script src="cart.js"></script>
 </html>
