Update menu item label from 'Placeholder 2' to 'Warme Dranken'

--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@
         <div class="menu-item" onclick="showItemDetails('Soepen')">Soepen</div>
         <div class="menu-item" onclick="showItemDetails('Salades')">Salades</div>
         <!-- placeholder-->
-        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Placeholder 2</div>
+        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Warme Dranken</div>
     </div>
 
     <!-- Modaal venster voor grotere afbeelding en beschrijving -->
