Update item identifiers for drinks and warm drinks; add image for warm drinks

--- a/website/index.html
+++ b/website/index.html
@@ -14,14 +14,13 @@
     <div class="menu-list">
         <h2>Menu</h2>
         <div class="menu-item" onclick="showItemDetails('Broodjes')">Broodjes</div>
-        <div class="menu-item" onclick="showItemDetails('drinks')">Drinken</div>
+        <div class="menu-item" onclick="showItemDetails('Koude-Dranken')">Koude Dranken</div>
+        <div class="menu-item" onclick="showItemDetails('Warme-Dranken')">Warme Dranken</div>
         <div class="menu-item" onclick="showItemDetails('Snacks')">Snacks</div>
         <div class="menu-item" onclick="showItemDetails('deserts')">Ijsjes</div>
         <div class="menu-item" onclick="showItemDetails('Deals')">Deals</div>
         <div class="menu-item" onclick="showItemDetails('Soepen')">Soepen</div>
         <div class="menu-item" onclick="showItemDetails('Salades')">Salades</div>
-        <!-- placeholder-->
-        <div class="menu-item" onclick="showItemDetails('Placeholder2')">Warme Dranken</div>
     </div>
 
     <!-- Modaal venster voor grotere afbeelding en beschrijving -->
