Refactor menu item categories and update display styles

--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
     <div class="menu-list">
         <h2>Menu</h2>
         <div class="menu-item" onclick="showCategory('Broodjes')">Broodjes</div>
-        <div class="menu-item" onclick="showCategory('drinks')">Koude Dranken</div>
+        <div class="menu-item" onclick="showCategory('Koude-Dranken')">Koude Dranken</div>
         <div class="menu-item" onclick="showCategory('Warme-Dranken')">Warme Dranken</div>
         <div class="menu-item" onclick="showCategory('Snacks')">Snacks</div>
         <div class="menu-item" onclick="showCategory('deserts')">Ijsjes</div>
