--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="cart.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
+
+
 <body>
 
     <!-- Linkerkant menu -->
@@ -54,6 +56,7 @@
         <p>&copy; 2025 Vista </p>
     </footer>
 
+</div>
     <script src="script.js"></script>
     <script src="cart.js"></script>
 </body>
