--- a/website/welcome.html
+++ b/website/welcome.html
@@ -21,7 +21,9 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Vista </p>
+        <center>
+            <p>&copy; 2025 Vista </p>
+        </center>
     </footer>
 
 </body>
