--- a/website/index.html
+++ b/website/index.html
@@ -61,3 +61,32 @@
     <script src="cart.js"></script>
 </body>
 </html>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<!-- Winkelwagen icoon -->
+<div class="cart-icon">
+    <i class="fas fa-shopping-cart"></i>
+    <span class="cart-count">0</span> <!-- Aantal producten -->
+</div>
+
+<!-- Producten -->
+<div class="products">
+    <div class="product">
+        <h3>Product 1</h3>
+        <p>Prijs: €10</p>
+        <button onclick="addToCart()">Toevoegen</button>
+    </div>
+    <div class="product">
+        <h3>Product 2</h3>
+        <p>Prijs: €15</p>
+        <button onclick="addToCart()">Toevoegen</button>
+    </div>
+    <div class="product">
+        <h3>Product 3</h3>
+        <p>Prijs: €20</p>
+        <button onclick="addToCart()">Toevoegen</button>
+    </div>
+</div>
+
+
+
