--- a/website/welcome.html
+++ b/website/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Welkompagina van de Mees</title>
+    <title>De welkompagina van de Mees</title>
     <link rel="stylesheet" href="welcome.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
