--- a/website/welcome.html
+++ b/website/welcome.html
@@ -12,11 +12,11 @@
 
     <div class="welcome">
         <div class="circle-wrapper">
-          <h1>Assesment 2</h1>
-          <p>Van Johnny Kindermann</p>
+          <h1>Mees</h1>
+          <p>Naar menu</p>
         </div>
-        <a href="index.html">
-            <button>Bestellen</button>
+        <a href="menu.html">
+            <button>Menu</button>
         </a>
     </div>
 
