--- a/website/welcome.html
+++ b/website/welcome.html
@@ -15,7 +15,7 @@
           <h1>Mees</h1>
           <p>Naar menu</p>
         </div>
-        <a href="menu.html">
+        <a href="index.html">
             <button>Menu</button>
         </a>
     </div>
