--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,7 @@
         <div class="menu-item" onclick="showCategory('Deals')">Deals</div>
         <div class="menu-item" onclick="showCategory('Soepen')">Soepen</div>
         <div class="menu-item" onclick="showCategory('Salades')">Salades</div>
+        <div class="menu-item" onclick="showCategory('Sausjes')">Sausjes</div>
     </div>
 
     <!-- Productweergave -->
