--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Het hoofdmenu van de Mees</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="Cart/cart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
@@ -66,7 +66,7 @@
 
 </div>
     <script src="script.js"></script>
-    <script src="cart.js"></script>
+    <script src="Cart/cart.js"></script>
 </body>
 </html>
 
