Refactor shopping cart functionality and update UI elements

--- a/website/index.html
+++ b/website/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Het hoofdmenu van de Mees</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Cart/cart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
 </head>
 
 
 <body>
+
+    <!-- Logo or photo -->
+    <img src="media/logo.png" alt="Logo" class="logo">
 
     <!-- Top bar menu -->
     <div class="menu-bar">
@@ -40,7 +42,6 @@
             <img id="modal-image" src="" alt="">
             <p id="modal-description"></p>
             <p id="modal-price"></p>
-            <input type="number" id="item-quantity" value="1" min="1" style="width: 50px; text-align: center;">
             <button id="add-to-cart">Toevoegen aan winkelmandje</button>
         </div>
     </div>
