Add payment page and update order button to link to it

--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,9 @@
             <!-- Winkelmandje items worden hier dynamisch toegevoegd -->
         </ul>
         <p>Totaal: €<span id="total-price">0.00</span></p>
-        <button id="order-button">Bestellen</button>
+        <a href="betalen.html">
+            <button id="order-button">Bestellen</button>
+        </a>
     </div>
 
     <!-- Winkelwagen icoon -->
