--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@
             <!-- Winkelmandje items worden hier dynamisch toegevoegd -->
         </ul>
         <p>Totaal: €<span id="total-price">0.00</span></p>
-        <a href="betalen.html" target="_blank">
+        <a href="betalen.html">
             <button id="order-button">Bestellen</button>
         </a>
     </div>
