--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,8 @@
         <ul id="cart-items">
             <!-- Winkelmandje items worden hier dynamisch toegevoegd -->
         </ul>
-        <p>Totaal: €<span id="total-price">0.00</span></p>
+        <p><span data-translate="Totaal">Totaal</span>: €<span id="total-price">0.00</span></p>
+
         <a href="betalen.html">
             <button id="order-button" data-translate="Bestellen">Bestellen</button>
         </a>
@@ -66,6 +67,7 @@
 
     <!-- Language switcher -->
     <div id="language-switcher" class="language-switcher">EN</div>
+    
 
     <script src="script.js"></script>
 </body>
