--- a/website/index.html
+++ b/website/index.html
@@ -27,6 +27,8 @@
         <div class="menu-item" onclick="showCategory('Soepen')" data-translate="Soepen">Soepen</div>
         <div class="menu-item" onclick="showCategory('Salades')" data-translate="Salades">Salades</div>
         <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Sausjes</div>
+        <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Yoghert</div>
+        <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Snoep</div>
     </div>
 
     <!-- Productweergave -->
