Fix syntax error in menu item onclick attribute for 'Snoep'

--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
         <div class="menu-item" onclick="showCategory('Salades')" data-translate="Salades">Salades</div>
         <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Sausjes</div>
         <div class="menu-item" onclick="showCategory('Yoghert')" data-translate="Yoghert">Yoghert</div>
-        <div class="menu-item" onclick="showCategory('Snoep)" data-translate="Snoep">Snoep</div>
+        <div class="menu-item" onclick="showCategory('Snoep')" data-translate="Snoep">Snoep</div>
     </div>
 
     <!-- Productweergave -->
