--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
         <div class="menu-item" onclick="showCategory('Koude-Dranken')" data-translate="Koude Dranken">Koude Dranken</div>
         <div class="menu-item" onclick="showCategory('Warme-Dranken')" data-translate="Warme Dranken">Warme Dranken</div>
         <div class="menu-item" onclick="showCategory('Snacks')" data-translate="Snacks">Snacks</div>
-        <div class="menu-item" onclick="showCategory('deserts')" data-translate="deserts">Ijsjes</div>
+        <div class="menu-item" onclick="showCategory('Desserts')" data-translate="Desserts">Desserts</div>
         <div class="menu-item" onclick="showCategory('Deals')" data-translate="Deals">Deals</div>
         <div class="menu-item" onclick="showCategory('Soepen')" data-translate="Soepen">Soepen</div>
         <div class="menu-item" onclick="showCategory('Salades')" data-translate="Salades">Salades</div>
