--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
         <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Sausjes</div>
         <div class="menu-item" onclick="showCategory('Yoghert')" data-translate="Yoghert">Yoghert</div>
         <div class="menu-item" onclick="showCategory('Snoep')" data-translate="Snoep">Snoep</div>
-        <div class="menu-item" onclick="showCategory('Overige')" data-translate="other">Overige</div>
+        <div class="menu-item" onclick="showCategory('Overige')" data-translate="Overige">Overige</div>
     </div>
 
     <!-- Productweergave -->
