--- a/website/index.html
+++ b/website/index.html
@@ -22,12 +22,12 @@
         <div class="menu-item" onclick="showCategory('Koude-Dranken')" data-translate="Koude Dranken">Koude Dranken</div>
         <div class="menu-item" onclick="showCategory('Warme-Dranken')" data-translate="Warme Dranken">Warme Dranken</div>
         <div class="menu-item" onclick="showCategory('Snacks')" data-translate="Snacks">Snacks</div>
-        <div class="menu-item" onclick="showCategory('deserts')" data-translate="deserts">Ijsjes</div>
+        <div class="menu-item" onclick="showCategory('Deserts')" data-translate="Deserts">Ijsjes</div>
         <div class="menu-item" onclick="showCategory('Deals')" data-translate="Deals">Deals</div>
         <div class="menu-item" onclick="showCategory('Soepen')" data-translate="Soepen">Soepen</div>
         <div class="menu-item" onclick="showCategory('Salades')" data-translate="Salades">Salades</div>
         <div class="menu-item" onclick="showCategory('Sausjes')" data-translate="Sausjes">Sausjes</div>
-        <div class="menu-item" onclick="showCategory('Yoghert')" data-translate="Yoghert">Yoghert</div>
+        <div class="menu-item" onclick="showCategory('Yoghurt')" data-translate="Yoghurt">Yoghurt</div>
         <div class="menu-item" onclick="showCategory('Snoep')" data-translate="Snoep">Snoep</div>
     </div>
 
