--- a/website/index.html
+++ b/website/index.html
@@ -57,7 +57,7 @@
         </ul>
         <p><span data-translate="Totaal">Totaal</span>: €<span id="total-price">0.00</span></p>
 
-        <a href="betalen.html">
+        <a href="betalen.html" target="_blank">
             <button id="order-button" data-translate="Bestellen">Bestellen</button>
         </a>
     </div>
