--- a/website/betalen.html
+++ b/website/betalen.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Betaalpagina Mees</title>
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #F56E28;
+        }
+        p {
+            font-size: 1.2em;
+            margin-top: 20px;
+        }
+        button {
+            margin-top: 30px;
+            padding: 10px 20px;
+            background-color: #F56E28;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 1.1em;
+        }
+        button:hover {
+            background-color: #F56E28;
+        }
+    </style>
 </head>
+
 <body>
-    <h1></h1>
+    <h1>Bedankt voor uw bestelling!</h1>
+    <p>Uw bestelling is succesvol geplaatst. U kunt dit tabblad nu sluiten.</p>
+    <button onclick="window.close()">Sluit dit tabblad</button>
+    <h1>Uw Bestellings nummer=</h1>
 </body>
+
 </html>
