--- a/website/betalen.html
+++ b/website/betalen.html
@@ -6,33 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Betaalpagina Mees</title>
     <link rel="icon" href="media/favicon.ico" type="image/x-icon">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            color: #F56E28;
-        }
-        p {
-            font-size: 1.2em;
-            margin-top: 20px;
-        }
-        button {
-            margin-top: 30px;
-            padding: 10px 20px;
-            background-color: #F56E28;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 1.1em;
-        }
-        button:hover {
-            background-color: #F56E28;
-        }
-    </style>
+    <link rel="stylesheet" href="betaal.css">
 </head>
 
 <body>
