--- a/website/betalen.html
+++ b/website/betalen.html
@@ -11,18 +11,21 @@
 
 <script>
     window.onload = function() {
-        var number = Math.floor((Math.random() * 999) + 1);
-        document.getElementById("random-number").innerHTML = "Uw Bestellings nummer = #" + number;
+        const urlParams = new URLSearchParams(window.location.search);
+        const orderNumber = urlParams.get('order_number');
+        if (orderNumber) {
+            document.getElementById("order-number").innerText = `Uw Bestellings nummer = ${orderNumber}`;
+        } else {
+            document.getElementById("order-number").innerText = "Uw Bestellings nummer kon niet worden opgehaald.";
         }
+    }
 </script>
 
 <body>
     <h1>Bedankt voor uw bestelling!</h1>
     <p>Uw bestelling is succesvol geplaatst. U kunt dit tabblad nu sluiten.</p>
     <button onclick="window.close()">Sluit dit tabblad</button>
-    <h1 id="random-number"></h1>
+    <h1 id="order-number">Uw Bestellings nummer = </h1>
 </body>
 
-<script src="script.js"></script>
 </html>
- 
